[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Cloth.gd" type="Script" id=1]
[ext_resource path="res://Font/Size10Outline.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Tiles/cloth.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.5, 22.5 )

[node name="Cloth" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, -9.53674e-07 )
scale = Vector2( 1.875, 1.875 )
texture = ExtResource( 3 )

[node name="Notif" type="Label" parent="."]
visible = false
margin_left = -80.0
margin_top = -32.0
margin_right = 80.0
margin_bottom = -16.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Click to pick up"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_Cloth_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Cloth_body_exited"]
[connection signal="input_event" from="." to="." method="_on_Cloth_input_event"]
